--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
                     </li>
                 </ul>
             </div>
+            <div class="float-right">
+                <img src="img\ITD.png" alt="Your Image" width="60" height="40">
+            </div>
         </div>
     </nav>
 
@@ -171,29 +174,18 @@
     </div>
 
 
-    <a name=about> </a>
+    <a name=about><br> </a>
     <div class="container">
         <h1>About</h1>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis omnis minus sequi laudantium reiciendis rerum
-        sunt, corrupti dicta velit, modi totam at ducimus? Consectetur voluptatibus adipisci, atque quia delectus fuga,
-        saepe ipsam beatae tempore hic assumenda quod, soluta sunt vitae dignissimos facere expedita dicta quidem vel
-        natus consequatur nulla. Consequatur?
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis omnis minus sequi laudantium reiciendis rerum
-        sunt, corrupti dicta velit, modi totam at ducimus? Consectetur voluptatibus adipisci, atque quia delectus fuga,
-        saepe ipsam beatae tempore hic assumenda quod, soluta sunt vitae dignissimos facere expedita dicta quidem vel
-        natus consequatur nulla. Consequatur?
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis omnis minus sequi laudantium reiciendis rerum
-        sunt, corrupti dicta velit, modi totam at ducimus? Consectetur voluptatibus adipisci, atque quia delectus fuga,
-        saepe ipsam beatae tempore hic assumenda quod, soluta sunt vitae dignissimos facere expedita dicta quidem vel
-        natus consequatur nulla. Consequatur?
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis omnis minus sequi laudantium reiciendis rerum
-        sunt, corrupti dicta velit, modi totam at ducimus? Consectetur voluptatibus adipisci, atque quia delectus fuga,
-        saepe ipsam beatae tempore hic assumenda quod, soluta sunt vitae dignissimos facere expedita dicta quidem vel
-        natus consequatur nulla. Consequatur?
-         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis omnis minus sequi laudantium reiciendis rerum
-        sunt, corrupti dicta velit, modi totam at ducimus? Consectetur voluptatibus adipisci, atque quia delectus fuga,
-        saepe ipsam beatae tempore hic assumenda quod, soluta sunt vitae dignissimos facere expedita dicta quidem vel
-        natus consequatur nulla. Consequatur?
+        <div class="backgroundAbout">
+            <div class="fontAbout">
+                We are ITD students which interested in the field of IoT devices. We have an idea to create an
+                innovation to monitor the risks of the environment based on the factors. We are interested in humidity,
+                temperature and PM dust. These factors can bring It is a component in decision-making about controlling
+                the environment in order to increase people's well-being. Therefore, the development group had an idea
+                to create this innovation.
+            </div>
+        </div>
     </div>
 
     <hr>
@@ -201,33 +193,37 @@
     <a name=product> </a>
     <div class="container">
         <h1>Product</h1>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis omnis minus sequi laudantium reiciendis rerum
-        sunt, corrupti dicta velit, modi totam at ducimus? Consectetur voluptatibus adipisci, atque quia delectus fuga,
-        saepe ipsam beatae tempore hic assumenda quod, soluta sunt vitae dignissimos facere expedita dicta quidem vel
-        natus consequatur nulla. Consequatur?
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis omnis minus sequi laudantium reiciendis rerum
-        sunt, corrupti dicta velit, modi totam at ducimus? Consectetur voluptatibus adipisci, atque quia delectus fuga,
-        saepe ipsam beatae tempore hic assumenda quod, soluta sunt vitae dignissimos facere expedita dicta quidem vel
-        natus consequatur nulla. Consequatur?
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis omnis minus sequi laudantium reiciendis rerum
-        sunt, corrupti dicta velit, modi totam at ducimus? Consectetur voluptatibus adipisci, atque quia delectus fuga,
-        saepe ipsam beatae tempore hic assumenda quod, soluta sunt vitae dignissimos facere expedita dicta quidem vel
-        natus consequatur nulla. Consequatur?
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis omnis minus sequi laudantium reiciendis rerum
-        sunt, corrupti dicta velit, modi totam at ducimus? Consectetur voluptatibus adipisci, atque quia delectus fuga,
-        saepe ipsam beatae tempore hic assumenda quod, soluta sunt vitae dignissimos facere expedita dicta quidem vel
-        natus consequatur nulla. Consequatur?
-         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis omnis minus sequi laudantium reiciendis rerum
-        sunt, corrupti dicta velit, modi totam at ducimus? Consectetur voluptatibus adipisci, atque quia delectus fuga,
-        saepe ipsam beatae tempore hic assumenda quod, soluta sunt vitae dignissimos facere expedita dicta quidem vel
-        natus consequatur nulla. Consequatur?
+            <div class="row">
+                <div class="col-5">
+                    <img src="img\IOT.png" alt="Your Image" width="500" height="450">
+                </div>
+                <div class="col-2">
+                    <img src="img\grae.png" alt="Your Image" width="2" height="450">
+                </div>
+                <div class="col-5 backgroundProduct">
+                <div class="fontProduct">
+                    IoT compornent have <br>
+                    - sensor DHT11 <br>
+                    - sensor SDS011 <br>
+                    - sensor LED <br>
+                    - sensor Buzzer
+                </div>
+            </div>
+        </div>
+        <br><br><br><br>
     </div>
+
+
+
 
     <!-- แก้ไขในส่วนนี้ -->
     <script src="Backend/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
+    <div class="bottom-bar">
+        <p>&copy; 2023 Your Website. All rights reserved.</p>
+    </div>
 </body>
 
 </html>
